# algorithms

./: CMakeLists.txt  main.cpp
conf/: Doxyfile.in
include/: algo.hpp
src/: algo.cpp  main.cpp  main.cpp.bak  n_queens  n_queens.cpp
